--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-.header{
-  min-height: 100vh;
-  width: 100%;
-  background-image: linear-gradient(rgba(4,9,39,0.7),rgba(4,9,39,0.7)),url(images/banner.png);
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    display: block;
+
+body {
+  background-color: red;
+}
